<resources>
    <string name="app_name">HW lala Practice</string>
    <string name="Btn1">Button 1</string>
    <string name="Btn3">Button 3</string>
    <string name="Btn2">Button 2</string>
    <string name="tv_act2">Activity 2</string>
    <string name="tv_act3">Activity 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home_ragment">Home Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="login">Login</string>
    <string name="pwd">Password</string>
    <string name="ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="zero">0</string>
    <string name="refresh_list">Refresh Chats</string>
    <string name="todoApp">Todo App</string>
    <string name="role">Role</string>
    <string name="address">Address(Area,City,Country)</string>
    <string name="cnic">CINC</string>
    <string name="add">Add</string>
    <string name="testing_db_btn">Testing DB Button</string>
    <string name="userId">User ID</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="testing_api_btn">Testing Api</string>
</resources>