<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp">

    <ImageView
        android:id="@+id/profile_iv"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/itachi"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@id/profile_iv"
        app:layout_constraintTop_toTopOf="@id/profile_iv"/>

    <TextView
        android:id="@+id/msg_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ipsum"
        android:maxLines="2"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_tv"
        app:layout_constraintTop_toBottomOf="@id/name_tv"/>

    <TextView
        android:id="@+id/total_msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/purple_700"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/msg_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>